fixed: bgImage not centered

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background: url('images\ used/bg.jpg') no-repeat -85px -130px;
+    background: url('images\ used/bg.jpg') no-repeat 50% -130px;
 }
 
 body {
